--- a/index.css
+++ b/index.css
@@ -2,7 +2,9 @@
     HOMEPAGE CSS -- This has all da styling for index.html, the homepage.
 */
 
-.doc-body {
+@import url(theme_colors.css);
+
+#doc-body {
     /* Defines the main body of the document */
     display: flex;
     align-content: center;
@@ -13,22 +15,60 @@
 .doc-filler {
     /* Settings for document filler that separates navbar from content */
     height: 20vh;
-    width: 1280px;
+    width: 100%;
 }
 
-.metalworking-img > img {
+#workshop-img > img {
     /* Settings of metalworker img */
     height: 330px;
     border-radius: 120px;
+    border: 5px solid var(--primary-accent-color);
 }
 
-.doc-title {
+#doc-title {
     /* Company motto thingy */
     font-family: lato;
     font-size: 2.5rem;
+    color: var(--primary-accent-color);
+    margin-top: auto;
+    margin-bottom: auto;
+    line-height: 140%;
 }
 
-body {
-    background-image: url(images/circuit_bg.jpg);
-    background-repeat: repeat;
+#doc-description {
+    margin-top: 10vh;
+    width: 70%;
+    font-family: lato;
+    font-size: 1.5rem;
+    color: var(--primary-text-color);
+    text-align: center;
+    line-height: 130%;
+}
+
+#learn-more-button {
+    border: none;
+    border-radius: 50px;
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-top: 100px;
+    font-size: 2rem;
+    cursor: pointer;
+    background-image: linear-gradient(45deg, var(--primary-button-color), var(--secondary-button-color));
+    font-family: lato;
+    color: var(--secondary-text-color);
+}
+
+#equipment-section {
+    margin-top: 20vh;
+    font-family: lato;
+    font-size: 2rem;
+    color: var(--primary-text-color);
+}
+
+#doc-footer {
+    display:flex;
+    align-content: center;
+    margin-top: 20vh;
 }
