--- a/navbar.css
+++ b/navbar.css
@@ -2,27 +2,23 @@
     DEFAULT NAVBAR SETUP -- INCLUDE ON EVERY WEBPAGE!
 */
 
+@import url(theme_colors.css);
+
 :root {
     /* Variables */
-    --navbar-background: rgb(50, 50, 50);
-    --navbar-background-hover: rgb(0,128,128);
-    --navbar-shadow: rgb(100, 100, 100);
-    --navbar-radius: 10px;
-    --navlink-text-color: rgb(255, 255, 255);
+    --navlink-text-color: #ffffff;
 }
 
 body {
     /* Center body */
     max-width: 1280px;
     margin: auto;
+    background-image: url("images/circuit_board_bg.webp");
 }
 
 .nav-list {
     /* Random navbar stuff */
-    background:var(--navbar-background);
-    box-shadow: 0px 0px 20px var(--navbar-shadow);
     margin:0;
-    border-radius: var(--navbar-radius);
     display:flex;
     justify-content: flex-end;
     align-items: center;
@@ -36,11 +32,12 @@ body {
     padding-right: 2rem;
     padding-left: 2rem;
     transition: all 100ms ease-in;
+    border-radius: 25px;
 }
 
 .nav-item:hover {
     /* Change color when hovering on link */
-    background-color: var(--navbar-background-hover);
+    background-color: var(--secondary-accent-color);
 }
 
 .nav-item a {
@@ -54,4 +51,9 @@ body {
 .nav-item:first-child {
     /* Put the logo on the far left of navbar */
     margin-right: auto;
+}
+
+.flex-break {
+    width: 100%;
+    height: 0px;
 }
