--- a/equipment.css
+++ b/equipment.css
@@ -1,3 +1,7 @@
+/*
+    EQUIPMENT WEBPAGE STYLESHEET -- Styling for the "equipment" webpage of website
+*/
+
 @import url("theme_colors.css");
 
 #doc-body {
@@ -28,8 +32,7 @@
     font-size: 1.5rem;
     color: var(--primary-text-color);
     width: 35%;
-    line-height: 130%;
-
+    line-height: 2rem;
 }
 
 #equipment-img {
@@ -48,4 +51,14 @@
     font-size: 1.5rem;
     margin-top: 10vh;
     line-height: 150%;
+}
+
+#table-saw-img img {
+    border-radius: 150px;
+    border: 5px solid var(--primary-accent-color);
+    width: 40rem;
+}
+
+#table-saw-img {
+    margin-top: 13vh;
 }
